...
    hasIcon: Boolean,
    icon: ImageVector = Icons.Default.Add,
    color: Color = MaterialTheme.colors.primary,
    iconColor: Color = Color.White.copy(alpha = 0.8f)
) {
    Surface(
        modifier = Modifier.semantics { contentDescription = "Main Button" }
            .heightIn(50.dp, 270.dp)
            .widthIn(50.dp, 170.dp)
            .padding(22.dp),
        shape = RoundedCornerShape(50.dp),
        elevation = 10.dp
    ) {
...
                        modifier =
                        Modifier
                            .padding(horizontal = 6.dp)
                            .padding(vertical = 22.dp),
                        color = Color.Transparent,
                        fontWeight = FontWeight(1000),
                        text = "START NOW",
                        textAlign = TextAlign.Center,
                        fontSize = 16.sp
                    )
                }
            } else {
                Text(
...
